# sized-chunks

./: Cargo.toml
src/: arbitrary.rs  lib.rs  types.rs
src/inline_array/: iter.rs  mod.rs
src/ring_buffer/: index.rs  iter.rs  mod.rs  refpool.rs  slice.rs
src/sized_chunk/: iter.rs  mod.rs  refpool.rs
src/sparse_chunk/: iter.rs  mod.rs  refpool.rs
