[package]
name = "sized-chunks"
version = "0.5.3"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Efficient sized chunk datatypes"
repository = "https://github.com/bodil/sized-chunks"
documentation = "http://docs.rs/sized-chunks"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["sparse-array"]
exclude = ["release.toml", "proptest-regressions/**"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "sized_chunk"
harness = false

[dependencies]
typenum = "1.12"
bitmaps = { version = "2.1", default-features = false }
refpool = { version = "0.3", optional = true }
arbitrary = { version = "0.4", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
proptest = "0.9.5"
proptest-derive = "0.1.2"
criterion = "0.3.0"
